--- a/css/minerals.css
+++ b/css/minerals.css
@@ -298,6 +298,19 @@
     align-items: center;
 }
 
+.author-avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 15px;
+    font-weight: bold;
+    color: var(--medium-gray);
+}
+
 .author-image {
     width: 60px;
     height: 60px;
